hw2-vpc.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC with Public and Private Subnets for Homework'

Parameters:
  VpcCidrBlock:
    Type: String
    Description: 'CIDR block for the VPC'
    Default: '10.0.0.0/16'

  PublicSubnet1CidrBlock:
    Type: String
    Description: 'CIDR block for the first public subnet'
    Default: '10.0.1.0/24'

  PublicSubnet2CidrBlock:
    Type: String
    Description: 'CIDR block for the second public subnet'
    Default: '10.0.2.0/24'

  PrivateSubnet1CidrBlock:
    Type: String
    Description: 'CIDR block for the first private subnet'
    Default: '10.0.3.0/24'

  PrivateSubnet2CidrBlock:
    Type: String
    Description: 'CIDR block for the second private subnet'
    Default: '10.0.4.0/24'

Resources:
  HWVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref 'VpcCidrBlock'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: 'HWVPC'

  HWInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: 'MyInternetGateway'

  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref 'HWVPC'
      InternetGatewayId: !Ref 'HWInternetGateway'

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref 'HWVPC'
      Tags:
        - Key: Name
          Value: 'PublicRouteTable'

  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref 'HWVPC'
      Tags:
        - Key: Name
          Value: 'PrivateRouteTable1'

  PrivateRouteTable2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref 'HWVPC'
      Tags:
        - Key: Name
          Value: 'PrivateRouteTable2'

  InternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: 'AttachGateway'
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'HWInternetGateway'

  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref 'HWVPC'
      CidrBlock: !Ref 'PublicSubnet1CidrBlock'
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: 'PublicSubnet1'

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref 'HWVPC'
      CidrBlock: !Ref 'PublicSubnet2CidrBlock'
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: 'PublicSubnet2'

  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref 'HWVPC'
      CidrBlock: !Ref 'PrivateSubnet1CidrBlock'
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: 'PrivateSubnet1'

  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref 'HWVPC'
      CidrBlock: !Ref 'PrivateSubnet2CidrBlock'
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: 'PrivateSubnet2'

  NatGatewayEIP:
    Type: 'AWS::EC2::EIP'
    DependsOn: 'AttachGateway'
    Properties:
      Domain: 'vpc'

  HWNatGateway:
    Type: 'AWS::EC2::NatGateway'
    DependsOn: 'AttachGateway'
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP.AllocationId'
      SubnetId: !Ref 'PublicSubnet1'

  PrivateRoute1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable1'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'HWNatGateway'

  PrivateRoute2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable2'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'HWNatGateway'

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      RouteTableId:
        Ref: PrivateRouteTable1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      RouteTableId:
        Ref: PrivateRouteTable2

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      RouteTableId:
        Ref: PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable
